# AI-Memory

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_ollama.py
.obsidian/: graph.json
app/: __init__.py
app/application/: __init__.py  ai_processor.py
app/cli/: __init__.py  entry.py
app/core/: __init__.py  config.py  logging.py
app/domain/: __init__.py  analysis.py  documents.py  notes.py
app/infrastructure/: __init__.py
app/pipelines/: __init__.py  ingest_workflow.py
app/prompts/: __init__.py  document_analysis.py
app/queue/: __init__.py  manager.py  models.py  state.py  stats.py  worker.py
app/templates/: __init__.py  obsidian_note.py
app/watcher/: __init__.py  events.py  filters.py  scanner.py  service.py
config/: default.yaml  development.yaml  production.yaml
data/failed/: 20_AI_Concepts_Explained_in_40_Minutes.md  AI News & Artificial Intelligence.md  Meet GPT-5.6.md
data/inbox/: AI_Concepts.md  ai-basics.md  python.md  test.md
docs/: architecture.md
tests/integration/: test_complete_workflow.py  test_queue_worker_pipeline.py
tests/unit/: test_ai_processor.py  test_cli.py  test_config.py  test_duplicate_detection.py  test_hashing.py  test_ingestion.py  test_logging.py  test_manifest.py  test_obsidian_note_generation.py  test_ollama_client.py  test_queue_manager.py  test_queue_state.py  test_queue_worker.py  test_text_preprocessing.py  test_watcher_filters.py  test_watcher_service.py  test_wiki_manager.py
vault/: index.md  log.md  overview.md
vault/Notes/: Machine Learning.md  (+1 more)
(+19 files in other folders)
