[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-ai-memory"
version = "0.1.0"
description = "Local-first Personal AI Memory System for building an Obsidian knowledge wiki with Ollama."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "GiridharBM",email="giridharbm6868@gmail.com" }
]
dependencies = [
  "ollama>=0.4.7",
  "pypdf>=4.3.1",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "PyYAML>=6.0.2",
  "rich>=13.7.1",
  "structlog>=24.2.0",
  "typer>=0.12.3",
  "watchdog>=4.0.2",
  "youtube-transcript-api>=0.6.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-PyYAML>=6.0.12"
]

[project.scripts]
pam = "app.cli.entry:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
